--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class="container">
+<body class="container" >
+
 
 <!--<h1>Coding Events</h1>-->
 
 <header th:replace="fragments :: header"></header>
+<p>
+<ol>
+    <th:block th:each = "event : ${events}">
+        <li th:text ="${event}"></li>
+    </th:block>
+</ol>
+</p>
 
 </body>
 </html>
