--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
@@ -8,7 +8,7 @@
 <form method="post">
     <div class="form-group">
         <label>Name
-        <input type="text" name="eventName" class="form-control">
+            <input type="text" name="eventName" class="form-control">
         </label>
     </div>
     <div class="form-group">
