Java Coding Events 2.2 Add a Model Property

--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -9,10 +9,12 @@
     <thread>
         <tr>
             <th>Name</th>
+            <th>Description</th>
         </tr>
     </thread>
     <tr th:each="event : ${events}">
         <td th:text="${event.name}"></td>
+        <td th:text="${event.description}"></td>
     </tr>
 </table>
 
